--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 }
 
 html {
-    background: #111;
-    color: #eee;
+    background: #000000;
+    color: #cccccc;
 	padding-bottom: 500px;
 }
 
