--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 html {
     background: #000000;
-    color: #cccccc;
+    color: #111111;
 	padding-bottom: 500px;
 }
 
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  font-size: 17px;
+  font-size: 18px;
 }
 
 h1 {
