--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 
 html {
     background: #000000;
-    color: #111111;
-	padding-bottom: 500px;
+    color: #ffffff;
+    padding-bottom: 500px;
 }
 
 dt {
