--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 }
 
 html {
-    background: #000000;
-    color: #ffffff;
+    background: #ffffff;
+    color: #111111;
     padding-bottom: 100px;
 }
 
